# NexusMainframe

./: .clang-tidy  CMakeLists.txt  NexusMainFrame.cpp  NexusMainFrame.hpp  README.md  main.cpp
.github/workflows/: build-release.yml  cmake-multi-platform.yml
Config/: ConfigProviderFactory.cpp  ConfigProviderFactory.hpp
Config/Provider/: ConfigProvider.cpp  ConfigProvider.hpp
Config/Source/: JsonConfigSource.cpp  JsonConfigSource.hpp
Event/: EventBus.cpp  EventBus.hpp
IPC/: CommandServer.cpp  CommandServer.hpp
Logger/: Logger.hpp
Modules/: IModule.hpp  ModuleLoader.cpp  ModuleLoader.hpp
Result/: Result.hpp
Scheduler/: Scheduler.cpp
cmake/: NexusCoreConfig.cmake.in
includes/Event/: EventBus.hpp
includes/IPC/: CommandServer.hpp
includes/Modules/: LoadedModule.hpp  ModuleLoader.hpp  ModuleManager.hpp  ModuleUnloader.hpp
includes/Modules/operations/: IModuleOperations.hpp  LinuxModuleOperations.hpp  ModuleOperationsFactory.hpp  WindowsModuleOperations.hpp
includes/Modules/scanner/: IModuleScanner.hpp  LinuxModuleScanner.hpp  ModuleScannerFactory.hpp  WindowsModuleScanner.hpp
includes/Scheduler/: Scheduler.hpp
includes/Task/: ITask.hpp
includes/cli/: NexusCLI.h
includes/commands/: Command.hpp  CommandRegistry.hpp  DisableModuleCommand.hpp  DownloadCommand.hpp  EnableModuleCommand.hpp  HelpCommand.hpp  ListCommand.hpp  MonitorCommand.hpp  ScanCommand.hpp
includes/config/: ConfigProviderFactory.hpp
includes/config/Adapter/: IConfigAdapter.hpp  LoadedModuleAdapter.hpp  LoadedModuleListAdapter.hpp
includes/config/Provider/: ConfigProvider.hpp
includes/config/Source/: IConfigSource.hpp
includes/exceptions/: PathResolutionException.hpp
includes/mainframe/service/: ForegroundServiceHost.hpp  IServiceHost.hpp  ServiceHostFactory.hpp  WindowsServiceHost.hpp
includes/manifest/: Manifest.hpp
includes/mqtt/: MQTTClient.hpp
includes/pathing/: PathManager.hpp  PathValidator.hpp
includes/pathing/resolver/: IPathResolver.hpp  PathResolverFactory.hpp  UnixPathResolver.hpp  WindowsPathResolver.hpp
service/linux/: nexus.service  postinst.sh  postrm.sh  prerm.sh
service/macos/: Info.plist  com.nexus.nexus.plist  postinstall.sh
service/windows/: install-service.ps1  uninstall-service.ps1
src/cli/: CMakeLists.txt  Main.cpp  NexusCLI.cpp
src/commands/: Command.cpp  DisableModuleCommand.cpp  DownloadCommand.cpp  EnableModuleCommand.cpp  HelpCommand.cpp  ListCommands.cpp  MonitorCommand.cpp  ScanCommand.cpp
src/config/: ConfigProviderFactory.cpp
src/config/provider/: ConfigProvider.cpp
src/config/source/: JsonConfigSource.cpp
src/event/: EventBus.cpp
src/ipc/: CommandServer.cpp
src/mainframe/service/: ServiceHostFactory.cpp  WindowsServiceHost.cpp
src/manifest/: Manifest.cpp
src/modules/: ModuleLoader.cpp  ModuleManager.cpp  ModuleUnloader.cpp
src/modules/operations/: ModuleOperationsFactory.cpp
src/mqtt/: MQTTClient.cpp
src/pathing/: PathResolver.cpp
src/pathing/resolver/: PathResolverFactory.cpp  UnixPathResolver.cpp  WindowsPathResolver.cpp
src/scheduler/: Scheduler.cpp
tests/: CMakeLists.txt
tests/Event/: EventBusTests.cpp
tests/command/: CommandRegistryTests.cpp
tests/config/: test_main.cpp
tests/config/source/: JsonConfigSourceTests.cpp
